# BlackJackBasicSolver

./: .gitignore  ActualStrategy.csv  Book1.csv  Book2.csv  CMakeLists.txt  Card.cpp  Card.h  DealerHand.cpp  DealerHand.h  Hand.cpp  Hand.h  HouseRules.h  PlayerBot.cpp  PlayerBot.h  PlayerHand.cpp  PlayerHand.h  README.md  RandomGuide.csv  RandomGuide1.csv  RandomGuide2.csv  RandomGuide3.csv  Results.txt  Shoe.cpp  Shoe.h  StrategyGuideHandler.cpp  StrategyGuideHandler.h  Table.cpp  Table.h  main.cpp
BlackJackBot_lib/: CMakeLists.txt  Card.cpp  Card.h  DealerHand.cpp  DealerHand.h  GeneticAlgorithManager.cpp  GeneticAlgorithManager.h  GeneticAlgorithmManager.cpp  GeneticAlgorithmManager.h  Hand.cpp  Hand.h  HouseRules.cpp  HouseRules.h  PlayerBot.cpp  PlayerBot.h  PlayerHand.cpp  PlayerHand.h  Shoe.cpp  Shoe.h  StrategyGuideGenerator.cpp  StrategyGuideGenerator.h  StrategyGuideHandler.cpp  StrategyGuideHandler.h  Table.cpp  Table.h
GA_Testing/Gen0/: Generation_Results.txt
GA_Testing/Gen0/Child1/: Results.txt  Strategy.csv
GA_Testing/Gen0/Child2/: Results.txt  Strategy.csv
GA_Testing/Gen0/Child3/: Strategy.csv
GA_Testing/Gen0/Child4/: Results.txt  Strategy.csv
GA_Testing/Gen1/: Generation_Results.txt
GA_Testing/Gen1/Child1/: Results.txt  Strategy.csv  strategy.csv
GA_Testing/Gen1/Child2/: Results.txt  Strategy.csv  strategy.csv
GA_Testing/Gen1/Child3/: Results.txt  Strategy.csv  strategy.csv
GA_Testing/Gen1/Child4/: Results.txt  Strategy.csv  strategy.csv
GA_Testing/Gen2/: Generation_Results.txt
GA_Testing/Gen2/Child1/: Results.txt  Strategy.csv
GA_Testing/Gen2/Child2/: Results.txt  Strategy.csv
GA_Testing/Gen2/Child3/: Results.txt  Strategy.csv
GA_Testing/Gen2/Child4/: Results.txt  Strategy.csv
GA_Testing/Gen3/: Generation_Results.txt
GA_Testing/Gen3/Child1/: Results.txt  Strategy.csv
GA_Testing/Gen3/Child2/: Results.txt  Strategy.csv
GA_Testing/Gen3/Child3/: Strategy.csv
GA_Testing/Gen3/Child4/: Results.txt  Strategy.csv
GA_Testing/Gen4/: Generation_Results.txt
GA_Testing/Gen4/Child1/: Results.txt  Strategy.csv
GA_Testing/Gen4/Child2/: Results.txt  Strategy.csv
GA_Testing/Gen4/Child3/: Strategy.csv
GA_Testing/Gen4/Child4/: Results.txt  Strategy.csv
GA_Testing/Gen5/Child1/: Results.txt  Strategy.csv
GA_Testing/Gen5/Child2/: Results.txt  Strategy.csv
GA_Testing/Gen5/Child3/: Strategy.csv
GA_Testing/Gen5/Child4/: Results.txt  Strategy.csv
Google_tests/: CMakeLists.txt  CardTest.cpp  DealerHandTests.cpp  HandTest.cpp  PlayerBotTests.cpp  PlayerHandTests.cpp  StrategyGuideHandlerTests.cpp  TestFile.csv
Google_tests/lib/googletest/include/gtest/: gtest.h
